Revert "fix: issue faced on safari browser for Blog author photo and navbar  … (#158)"
This reverts commit 49d78ed18a46bc4c9c695071251b0f5020898a2a.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -39,10 +39,6 @@
       0 0 5px #30ede6,
       0 0 10px #30ede6;
   }
-
-  .backdrop-blur-3xl {
-    -webkit-backdrop-filter: blur(64px);
-  }
 }
 
 html,
